src/objects/BRNSHRK__BrainsharkInteractionResponse__c.object
<CustomObject>
    <fields>
        <fullName>BRNSHRK__BrainsharkActivity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brainshark Activity</label>
        <referenceTo>BRNSHRK__BrainsharkActivity__c</referenceTo>
        <relationshipLabel>Brainshark Interaction Responses</relationshipLabel>
        <relationshipName>R00N50000001IGiQEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__BrainsharkPresentation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brainshark Presentation</label>
        <referenceTo>BRNSHRK__BrainsharkPresentation__c</referenceTo>
        <relationshipLabel>Brainshark Interaction Responses</relationshipLabel>
        <relationshipName>R00N50000001IGjHEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Brainshark Interaction Responses</relationshipLabel>
        <relationshipName>R00N50000001IGlDEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Brainshark Interaction Responses</relationshipLabel>
        <relationshipName>R00N50000001IGkyEAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__CorrectAnswerText__c</fullName>
        <label>Correct Answer Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__CorrectAnswer__c</fullName>
        <description>The correct Answer (only for Questions, not surveys or polls)</description>
        <label>Correct Answer</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Format__c</fullName>
        <label>Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Multiple Choice</fullName>
                </value>
                <value>
                    <fullName>True / False</fullName>
                </value>
                <value>
                    <fullName>Essay</fullName>
                </value>
                <value>
                    <fullName>Rating</fullName>
                </value>
                <value>
                    <fullName>Ranking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRNSHRK__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Brainshark Interaction Responses</relationshipLabel>
        <relationshipName>R00N50000001IGl3EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Points__c</fullName>
        <label>Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__QuestionText__c</fullName>
        <description>The text of the Brainshark Question</description>
        <label>Question Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__ResponseText__c</fullName>
        <description>The users response</description>
        <label>Response Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Response__c</fullName>
        <label>Response</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRNSHRK__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Poll</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BRNSHRK__ViewedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The salesforce.com user (if known).</description>
        <label>Viewed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001IH2TEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Brainshark Interaction Response</label>
    <listViews>
        <fullName>BRNSHRK__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>6.1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INT-{YYYY}-{MM}-{DD}-{000}</displayFormat>
        <label>Brainshark Interaction Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brainshark Interaction Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>